# almond-bread

./: AlmondBread.1  AlmondBread.html  AlmondBread.jdoc  AlmondBread.ps  ChangeLog  INSTALL  Makefile.in  README.txt  WishList  about.tcl  almond.ppm  almond.tail  appinit.c  color.tcl  coloring.h  compute.c  conf.h  conf.h.in  configure  configure.in  conventional.h  eqdis.map  fract.h  fractint.c  fractint.h  general.c  gif.c  gif.h  giftoppm.c  ieee754.h  interface.tcl  interleave.c  iterate.h  main.c  main4.0.c  main4.1.c  main4.2.c  optimized.h  ppmtogif.c  raster.c  (+16 more)
